--- a/OurGame2k/Views/GameView.xaml
+++ b/OurGame2k/Views/GameView.xaml
@@ -19,6 +19,7 @@
             <ColumnDefinition Width="auto" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
+        <Image Source="Assets/TileEmpty" />
         <Viewbox
             Grid.Row="1"
             Grid.Column="1"
